--- a/report_cifar.ipynb
+++ b/report_cifar.ipynb
@@ -956,12 +956,9 @@
     "There is also an alternative approach to regularize neural networks which is called DropConnect. DropConnect is a regularisation technique which was introduced as an alternative approach to dropout[1].\n",
     "As written in a paper: \"When training with Dropout,\n",
     "a randomly selected subset of activations are\n",
-    "set to zero within each layer. DropConnect instead sets a randomly selected subset of weights within the network to zero.\" One can think of DropConnect as a Dropout generalization to the fully connected layers.\n",
+    "set to zero within each layer. DropConnect instead sets a randomly selected subset of weights within the network to zero.\" One can think of DropConnect as a Dropout generalization to the fully connected layers.[2]\n",
     "\n",
-    "<figure class=\"image\">\n",
-    "  <img src=\"figures/dropconnect.png\" alt=\"dropconnect\"></img>\n",
-    "  <figcaption><center> Comparison of neural network architectures taken from [2].</center></figcaption>\n",
-    "</figure>\n",
+    "![](figures/dropconnect.png)\n",
     "\n",
     "[1] http://proceedings.mlr.press/v28/wan13.pdf\n",
     "<br>\n",
